recipient-issues: update button align
Correct the align of the filter button and the data input

--- a/packages/pilot/src/containers/RecipientDetails/Balance/style.css
+++ b/packages/pilot/src/containers/RecipientDetails/Balance/style.css
@@ -1,5 +1,9 @@
 @import "former-kit-skin-pagarme/dist/styles/spacing.css";
 
+.filter {
+  display: flex;
+}
+
 .filter > button {
   margin-left: var(--spacing-small);
 }
